--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/material": "^5.10.4",
         "@vitejs/plugin-react": "^2.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
